<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:entries="@array/shapes" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_rectangle_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/width"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_rectangle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_circle_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/radius"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textSize="24sp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_triangle_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/base"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_triangle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_areas_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center"
        android:background="@color/design_default_color_secondary"
        android:textSize="34sp" />

</LinearLayout>